--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -172,11 +172,11 @@ a, a * {
   margin: 0 auto;
   width: 100vw;
   min-width: 730px;
-  min-height: 76vh;
+  min-height: 71vh;
 }
 // partials/home
 .home {
-  height: 76vh;
+  height: 71vh;
   width: 100%;
   background: url('../images/originals/market_flowers.JPG');
   background-position: center;
